--- a/example/index.html
+++ b/example/index.html
@@ -6,10 +6,8 @@
     <title>test</title>
   </head>
   <body>
-    <script type="module">
-      import is, { isColor } from '../dist/is.esm.js'
-      console.log(is.color('#909'))
-      console.log(isColor('#000'))
-    </script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
+
+资深改tinymce源码
